# BA

./: .gitignore  CMakeLists.txt  CONFIG.H  README.md  evaluate_threshhold.py  evaluate_transmission.py  frame_poc.c  lib.c  lib.h  meassure_recv.c  meassure_send.c  plot hist.py  poc.c  poc_sync.c  receive_ascii.c  receiver.c  send_ascii.c  sender.c  setup_ubuntu.sh  sharedlib.c  sharedlib.h  test.c  threshholds.c
data/: bandwidths.py  confus_amd_ff.py  confus_amd_fr.py  confus_intel_ff.py  confus_intel_fr.py  get_diff.py  readme.md  transmissions.py
data/FF_0.1KHz/: groupB.txt
data/FF_100KHz/: act (2).txt  groupB.txt  pred (1).txt  pred (2).txt  pred.txt
data/FF_10KHz/: act.txt
data/FF_1KHz/: groupA.txt
data/FR_100KHz/: groupA.txt  groupB.txt
data/FR_10KHz/: act (4).txt  act (7).txt  act (9).txt  act.txt  pred (4).txt  pred (5).txt  pred (8).txt  pred.txt
data/amd/: ccx-comp.py  timings_ff.py  timings_fr.py  transmissions.py
data/amd/FF_100kHz/: act.txt  groupA.txt  groupB.txt  pred.txt  readme.md
data/amd/FF_10kHz/: act.txt  groupA.txt  groupB.txt  pred.txt  readme.md
data/amd/FF_1kHz/: act.txt  groupA.txt  groupB.txt  pred.txt  readme.md
data/amd/FR_100kHz/: act.txt  groupA.txt  groupB.txt  pred.txt  readme.md
data/amd/FR_10kHz/: act.txt  groupA.txt  groupB.txt  pred.txt  readme.md
data/amd/FR_1kHz/: act.txt  groupA.txt  groupB.txt  pred.txt  readme.md
data/amd/cross_ccx_FR_10kHz/: groupA.txt  groupB.txt  readme.md
data/amd/same_ccx_FR_10kHz/: groupA.txt  groupB.txt  readme.md
data/digitalocean/FF_100kHz/: groupA.txt  groupB.txt  readme.md
data/digitalocean/FF_10kHz/: act.txt  groupA.txt  groupB.txt  pred.txt  readme.md
data/digitalocean/FF_1KHz/: pred.txt  (+1 more)
data/droplet_FF_1KHz/: act.txt  groupA.txt  groupB.txt
data/droplet_FR_1KHz/: groupA.txt
data/intel/: readme.md  timings_ff.py  timings_fr.py  transmissions.py
docs/: 8. Coding for Error Correction_ the Shannon Bound.html  BA-handout.md  CNAME  _config.yml  index.html  meeting-04-02-20.md  readme.md
(+66 files in other folders)
